# HomeSplit

./: .env  .gitignore  README.md  homesplit.db  main.py  pyproject.toml  requirements.txt  start.py  start.sh
src/api/: dependecies.py  schemas.py
src/api/routers/: expense_router.py  token.py  user_route.py
src/application/use_case/: register_use.py
src/application/use_cases/: get_expenses.py  get_user.py  register_expense.py  register_user.py
src/domain/: entities.py  exceptions.py  interfaces.py  value_objects.py
src/infrastructure/: database.py  models.py  repositories.py  security.py  unit_of_work.py
tests/: test_register_user_use_case.py
web/: api_client.py  main_app.py
web/views/: dashboard.py  login.py  register_expenses.py
