[project]
name = "homesplit"
version = "0.1.0"
description = ""
authors = [
    {name = "Saulo",email = "saulovicto01@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard] (>=0.135.2,<0.136.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]

[tool.poetry]
packages = [{include = "homesplit", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
